--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,604 +1,716 @@
 .form {
+  padding: 16px 30px 55px 30px;
+
   @media (min-width: $vp-768) {
-    position: relative;
+    padding: 64px 0 50px 0;
+  }
+
+  @media (min-width: $vp-1150) {
+    padding-top: 117px;
   }
 }
 
-.form-group {
+.form__description {
+  margin: 0;
+  margin-bottom: 29px;
+
+  font-size: 13px;
+
+  @media (min-width: $vp-768) {
+    margin-bottom: 13px;
+    padding: 0 50px;
+
+    font-size: 17px;
+    line-height: 30px;
+  }
+
+  @media (min-width: $vp-1150) {
+    width: 702px;
+    margin: 0 auto;
+    padding: 0;
+  }
+}
+
+.form__wrapper {
+  @media (min-width: $vp-768) {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.form__inner {
+  @media (min-width: $vp-768) {
+    background-color: $color-white-smoke;
+  }
+}
+
+.form__group {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
 
-  border: none;
+  border: 0;
 
-  &--contacts {
-    @media (min-width: $vp-768) {
-      display: grid;
-    }
+  @media (min-width: $vp-768) {
+    position: relative;
+
+    display: grid;
+    align-items: start;
+    margin: 50px 0;
+    padding: 0 50px;
+
+    border: none;
+
+    grid-template-columns: 167px auto;
   }
 
-  &--grey {
+  @media (min-width: $vp-1150) {
+    width: 1150px;
+    margin-right: auto;
+    margin-left: auto;
+
+    grid-template-columns: 175px 1fr;
+  }
+
+  &--radio {
+    margin-bottom: 32px;
+
     @media (min-width: $vp-768) {
-      padding-top: 62px;
+      margin-bottom: 50px;
+
+      grid-template-rows: min-content 1fr;
+      grid-template-columns: 170px auto;
     }
 
     @media (min-width: $vp-1150) {
-      padding-top: 50px;
+      margin-top: 64px;
+
+      grid-template-columns: 176px 1fr;
+    }
+
+    .form__legend {
+      margin-bottom: 31px;
+
+      @media (min-width: $vp-768) {
+        top: 18px;
+
+        min-width: 115px;
+      }
+    }
+
+    .form__label:not(:last-child) {
+      margin-bottom: 13px;
+
+      @media (min-width: $vp-768) {
+        margin-bottom: 27px;
+      }
+
+      @media (min-width: $vp-1150) {
+        margin-bottom: 25px;
+      }
+    }
+
+    .form__text {
+      padding-top: 4px;
+
+      @media (min-width: $vp-768) {
+        padding-top: 0;
+      }
+
+      @media (min-width: $vp-1150) {
+        max-width: 670px;
+      }
     }
   }
 
-  @media (min-width: $vp-768) {
-    margin-bottom: 70px;
+  &--checkbox {
+    margin-bottom: 33px;
 
-    &--type {
-      margin-bottom: 58px;
+    @media (min-width: $vp-768) {
+      margin-bottom: 50px;
+
+      .form__text {
+        margin-right: 0;
+      }
+    }
+
+    @media (min-width: $vp-1150) {
+      margin-top: 48px;
+      margin-bottom: 52px;
+
+      .form__text {
+        padding-top: 5px;
+      }
+    }
+
+    .form__legend {
+      margin-bottom: 25px;
+
+      @media (min-width: $vp-768) {
+        top: 17px;
+
+        margin-bottom: 0;
+      }
+
+      @media (min-width: $vp-1150) {
+        top: 20px;
+      }
+    }
+
+    .form__label:not(:last-child) {
+      margin-bottom: 23px;
+
+      @media (min-width: $vp-768) {
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  &--user {
+    margin-bottom: 33px;
+
+    @media (min-width: $vp-768) {
+      margin-bottom: 50px;
+
+      grid-template-rows: min-content min-content 1fr;
+    }
+
+    .form__legend {
+      margin-bottom: 29px;
+
+      @media (min-width: $vp-768) {
+        top: 18px;
+
+        margin-bottom: 0;
+      }
+    }
+
+    .form__text {
+      @media (min-width: $vp-768) {
+        max-width: 200px;
+      }
+
+      @media (min-width: $vp-1150) {
+        max-width: 260px;
+      }
+    }
+  }
+
+  &--phone {
+    margin-bottom: 35px;
+
+    @media (min-width: $vp-768) {
+      margin-bottom: 24px;
+    }
+
+    .form__legend {
+      margin-bottom: 4px;
+
+      @media (min-width: $vp-768) {
+        top: 16px;
+
+        margin-bottom: 0;
+      }
+    }
+
+    .form__label {
+      @media (min-width: $vp-768) {
+        width: 100%;
+      }
+
+      @media (min-width: $vp-1150) {
+        width: 700px;
+      }
+    }
+
+    .form__input-text {
+      padding-right: 45px;
+
+      @media (min-width: $vp-768) {
+        padding-right: 65px;
+      }
+
+      @media (min-width: $vp-1150) {
+        padding-right: 45px;
+      }
+    }
+
+    .form__svg {
+      right: 7px;
+
+      @media (min-width: $vp-768) {
+        right: 26px;
+      }
+
+      @media (min-width: $vp-1150) {
+        right: 8px;
+      }
+    }
+  }
+
+  &--email {
+    margin-bottom: 35px;
+
+    @media (min-width: $vp-768) {
+      margin-top: 0;
+      margin-bottom: 50px;
+    }
+
+    .form__legend {
+      margin-bottom: 5px;
+
+      @media (min-width: $vp-768) {
+        top: 18px;
+
+        margin-bottom: 0;
+      }
+    }
+
+    .form__label {
+      @media (min-width: $vp-768) {
+        width: 100%;
+      }
+
+      @media (min-width: $vp-1150) {
+        width: 700px;
+      }
+    }
+
+    .form__input-text {
+      padding-right: 45px;
+
+      @media (min-width: $vp-768) {
+        padding-right: 65px;
+      }
+
+      @media (min-width: $vp-1150) {
+        padding-right: 45px;
+      }
+    }
+
+    .form__svg {
+      right: 3px;
+
+      @media (min-width: $vp-768) {
+        right: 22px;
+      }
+
+      @media (min-width: $vp-1150) {
+        right: 4px;
+      }
+    }
+  }
+
+  &--text {
+    @media (min-width: $vp-768) {
+      margin-bottom: 53px;
+    }
+
+    @media (min-width: $vp-1150) {
+      margin-bottom: 49px;
+    }
+
+    .form__legend {
+      margin-bottom: 22px;
+
+      @media (min-width: $vp-768) {
+        top: 20px;
+
+        margin-bottom: 0;
+      }
     }
   }
 }
 
-.form-group__title {
-  position: relative;
+.form__legend {
+  display: flex;
+  margin: 0;
+  overflow: hidden;
 
-  width: 90px;
-
-  font-style: normal;
   font-weight: 700;
   font-size: 17px;
   line-height: 16px;
   color: $color-downy;
   text-transform: uppercase;
 
-  &--type {
-    margin-bottom: 17px;
-  }
-
-  &--color {
-    margin-bottom: 35px;
-  }
-
-  &--about {
-    margin-bottom: 29px;
-  }
-
-  &--contacts {
-    margin-bottom: 19px;
-  }
-
-  &--additionally {
-    margin-bottom: 23px;
-  }
-
-  &::before {
+  &::after {
     content: "";
-    position: absolute;
-    top: 8px;
-    left: 62px;
 
-    width: 198px;
+    align-self: center;
+    width: 100%;
     height: 1px;
+    margin-left: 22px;
 
-    background-color: $color-downy-mod;
+    background-color: #62d1ba;
 
     @media (min-width: $vp-768) {
       display: none;
     }
   }
 
-
   @media (min-width: $vp-768) {
-    float: left;
-    margin-right: 56px;
+    position: relative;
+
+    padding: 0;
+    padding-right: 30px;
+
+    grid-row: 1 / -1;
   }
 
   @media (min-width: $vp-1150) {
-    margin-right: 50px;
+    margin-left: 61px;
+    padding-right: 10px;
   }
 }
 
-.form-group__label {
+.form__legend-text {
+  flex-shrink: 0;
+  max-width: 80%;
+
+  @media (min-width: $vp-768) {
+    flex-shrink: 1;
+    max-width: 100%;
+
+    word-break: break-word;
+  }
+}
+
+.form__grid-label {
+  @media (min-width: $vp-768) {
+    display: grid;
+    justify-content: start;
+    align-items: start;
+
+    column-gap: 87px;
+
+    grid-column: 2;
+    grid-template-columns: repeat(2, 175px);
+    row-gap: 24px;
+
+    .form__label {
+      grid-column: auto;
+    }
+  }
+
+  @media (min-width: $vp-1150) {
+    column-gap: 98px;
+
+    grid-template-columns: 164px 166px 203px;
+  }
+}
+
+.form__label {
   position: relative;
 
-  padding-right: 25px;
+  display: flex;
+  align-items: center;
 
-  font-style: normal;
+  @media (min-width: $vp-768) {
+    grid-column: 2;
+    justify-self: start;
+  }
+
+  .form__group--user & {
+    flex-direction: column;
+    align-items: stretch;
+
+    @media (min-width: $vp-768) {
+      flex-direction: row;
+      align-items: center;
+      width: 100%;
+    }
+
+    @media (min-width: $vp-1150) {
+      width: 700px;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 22px;
+
+      @media (min-width: $vp-768) {
+        margin-bottom: 24px;
+      }
+    }
+  }
+
+  &:hover {
+    .form__dot,
+    .form__check {
+      border-color: $color-downy-mod;
+    }
+  }
+
+  &:active {
+    .form__dot,
+    .form__check {
+      border-color: rgba($color-default-black, 0.3);
+    }
+  }
+}
+
+.form__input-radio {
+  &:focus {
+    + .form__dot {
+      border-color: $color-downy-mod;
+    }
+  }
+
+  &:checked {
+    + .form__dot {
+      background-image: url("../img/input-radio.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+
+      @media (min-width: $vp-768) {
+        background-size: 23px 23px;
+      }
+    }
+  }
+
+  &:disabled {
+    + .form__dot {
+      border-color: rgba($color-default-black, 0.3);
+    }
+
+    + .form__dot,
+    ~ .form__text {
+      opacity: 0.3;
+
+      pointer-events: none;
+    }
+  }
+}
+
+.form__input-checkbox {
+  &:focus {
+    + .form__check {
+      border-color: $color-downy-mod;
+    }
+  }
+
+  &:checked {
+    + .form__check {
+      background-image: url("../img/tick.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+
+      @media (min-width: $vp-768) {
+        background-image: url("../img/tablet-tick.svg");
+      }
+    }
+  }
+
+  &:disabled {
+    + .form__check {
+      border-color: rgba($color-default-black, 0.3);
+    }
+
+    + .form__check,
+    ~ .form__text {
+      opacity: 0.3;
+
+      pointer-events: none;
+    }
+  }
+}
+
+.form__dot {
+  flex-shrink: 0;
+  align-self: flex-start;
+  width: 40px;
+  height: 40px;
+  margin-right: 19px;
+
+  border: 2px solid $color-charcoal;
+  border-radius: 50%;
+
+  @media (min-width: $vp-768) {
+    width: 50px;
+    height: 50px;
+    margin-right: 26px;
+  }
+
+  @media (min-width: $vp-1150) {
+    margin-right: 28px;
+  }
+}
+
+.form__check {
+  flex-shrink: 0;
+  align-self: flex-start;
+  width: 38px;
+  height: 38px;
+  margin-right: 23px;
+
+  border: 2px solid $color-charcoal;
+
+  @media (min-width: $vp-768) {
+    width: 52px;
+    height: 52px;
+    margin-right: 30px;
+
+    background-size: 34px auto;
+  }
+}
+
+.form__input-text {
+  flex-grow: 1;
+  padding: 16px 0;
+
+  font-size: 17px;
+  line-height: 18px;
+  font-family: $ff-open-sans;
+  color: $color-charcoal;
+
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid $color-default-black;
+
+  appearance: textfield;
+
+  @media (min-width: $vp-768) {
+    align-self: flex-start;
+    padding: 12px 18px;
+
+    font-size: 19px;
+  }
+
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    appearance: none;
+  }
+
+  &::placeholder {
+    color: rgba($color-default-black, 0.3);
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:focus,
+  &:hover {
+    border-color: $color-downy-mod;
+
+    + .form__svg {
+      opacity: 1;
+
+      fill: $color-downy-mod;
+    }
+  }
+
+  &:disabled {
+    opacity: 0.3;
+  }
+}
+
+.form__svg {
+  position: absolute;
+  top: 49%;
+  right: 0;
+
+  transform: translateY(-50%);
+  opacity: 0.2;
+
+  pointer-events: none;
+
+  fill: $color-default-black;
+}
+
+.form__text {
   font-weight: 700;
   font-size: 17px;
   line-height: 18px;
 
   @media (min-width: $vp-768) {
-    margin: 0;
-    padding: 0;
+    margin-right: 26px;
 
     font-size: 19px;
-    line-height: 18px;
-  }
-
-  &--checkbox {
-    padding-left: 60px;
-
-    @media (min-width: $vp-768) {
-      padding-left: 103px;
-    }
-  }
-
-  &--radio {
-    display: flex;
-    padding: 14px 20px 10px 60px;
-
-    @media (min-width: $vp-768) {
-      padding: 0 20px 10px 100px;
-    }
   }
 }
 
-.form__list {
-  margin: 0;
-  margin-bottom: 31px;
-  padding: 0;
+.form__textarea {
+  margin-bottom: 3px;
+  padding: 15px;
 
-  list-style: none;
-
-  @media (min-width: $vp-768) {
-    display: grid;
-    margin-bottom: 0;
-  }
-
-  &--has-wrapper {
-    @media (min-width: $vp-768) {
-      display: grid;
-
-      gap: 6px 30px;
-      grid-template-columns: 1fr 1fr;
-    }
-
-    @media (min-width: $vp-1150) {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
-  }
-}
-
-.form-group__input {
-  margin: 0;
-
-  font-style: normal;
-  font-weight: 400;
   font-size: 17px;
   line-height: 18px;
-  font-family: inherit;
-
-  border: none;
-
-  &--radio {
-    margin-bottom: 24px;
-  }
-
-  &--checkbox {
-    margin-bottom: 43px;
-  }
-
-  &--about {
-    width: 100%;
-    padding: 13px 0;
-
-    border-bottom: 2px solid $color-default-black;
-
-    &::placeholder {
-      font-size: 17px;
-      line-height: 18px;
-      color: $color-default-black;
-
-      opacity: 0.3;
-    }
-
-    &:hover {
-      border-color: $color-downy-mod;
-    }
-
-    &:hover ~ svg {
-      opacity: 1;
-
-      fill: $color-downy-mod;
-    }
-
-    &:focus {
-      border-color: $color-downy-mod;
-      outline: none;
-    }
-
-    &:focus ~ svg {
-      opacity: 1;
-
-      fill: $color-downy-mod;
-    }
-
-    &:active {
-      border-color: $color-downy-mod;
-    }
-
-    &:active ~ svg {
-      opacity: 1;
-
-      fill: $color-downy-mod;
-    }
-
-    @media (min-width: $vp-768) {
-      padding-left: 15px;
-    }
-  }
-
-  &--contacts {
-    width: 100%;
-    padding: 20px 0;
-
-    border-bottom: 2px solid $color-default-black;
-
-    &::placeholder {
-      font-size: 17px;
-      line-height: 18px;
-      color: $color-default-black;
-
-      opacity: 0.3;
-    }
-
-    &:hover {
-      border-color: $color-downy-mod;
-    }
-
-    &:hover ~ svg {
-      opacity: 1;
-
-      fill: $color-downy-mod;
-    }
-
-    &:focus {
-      border-color: $color-downy-mod;
-      outline: none;
-    }
-
-    &:focus ~ svg {
-      opacity: 1;
-
-      fill: $color-downy-mod;
-    }
-
-    &:active {
-      border-color: $color-downy-mod;
-    }
-
-    &:active ~ svg {
-      opacity: 1;
-
-      fill: $color-downy-mod;
-    }
-
-    @media (min-width: $vp-768) {
-      padding-left: 15px;
-    }
-  }
-
-  @media (min-width: $vp-768) {
-    font-size: 18px;
-    line-height: 19px;
-  }
-}
-
-.form-group__input[type="radio"]:checked + .form-group__mark--radio::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-
-  width: 18px;
-  height: 18px;
-
-  background-color: $color-downy-mod;
-  border-radius: 50%;
-  transform: translateX(-50%) translateY(-50%);
-
-  @media (min-width: $vp-768) {
-    width: 22px;
-    height: 22px;
-  }
-}
-
-.form-group__mark {
-  position: absolute;
-  top: 45%;
-  left: 0;
-
-  border: 2px solid $color-default-black;
-  transform: translateY(-50%);
-
-  &--radio {
-    width: 40px;
-    height: 40px;
-
-    border-radius: 50%;
-  }
-
-  &--checkbox {
-    width: 38px;
-    height: 38px;
-  }
-
-  &:hover {
-    border-color: $color-downy-mod;
-  }
-
-  &:active {
-    border-color: rgba($color-charcoal, 0.3);
-  }
-
-  @media (min-width: $vp-768) {
-    &--radio {
-      left: 3px;
-
-      width: 48px;
-      height: 48px;
-    }
-
-    &--checkbox {
-      top: 21px;
-      left: -1px;
-
-      width: 52px;
-      height: 52px;
-    }
-  }
-}
-
-.form-group__input[type="checkbox"]:checked + .form-group__mark--checkbox::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-
-  width: 24px;
-  height: 17px;
-
-  background-image: url("../img/tick.svg");
-  transform: translateX(-50%) translateY(-50%);
-
-  @media (min-width: $vp-768) {
-    width: 32px;
-    height: 22px;
-
-    background-image: url("../img/tablet-tick.svg");
-  }
-}
-
-.form-group__textarea {
-  width: 100%;
-  min-height: 142px;
-  padding: 17px;
-
-  font-size: 19px;
-  line-height: 18px;
+  font-family: $ff-open-sans;
   color: $color-charcoal;
 
   border: 2px solid $color-charcoal;
 
   resize: none;
 
-  &::placeholder {
-    font-size: 17px;
-    line-height: 18px;
-    color: $color-default-black;
-
-    opacity: 0.3;
-  }
-
-  &:hover {
-    border-color: $color-downy-mod;
-  }
-
-  &:focus {
-    border-color: $color-downy-mod;
-    outline: none;
-  }
-
-  &:active {
-    border-color: $color-downy-mod;
-  }
-
   @media (min-width: $vp-768) {
-    &::placeholder {
-      font-size: 19px;
-    }
+    margin-bottom: 0;
+
+    font-size: 19px;
+
+    grid-column: 2;
   }
 
   @media (min-width: $vp-1150) {
-    max-width: 700px;
+    width: 700px;
+  }
+
+  &::placeholder {
+    color: rgba($color-default-black, 0.3);
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:focus,
+  &:hover {
+    border-color: $color-downy-mod;
   }
 }
 
-.form__mark {
-  display: block;
+.form__submit-wrapper {
+  @media (min-width: $vp-768) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 50px;
+  }
+
+  @media (min-width: $vp-1150) {
+    width: 700px;
+    margin: 0 auto;
+    padding: 0;
+  }
+}
+
+.form__required {
   margin-bottom: 30px;
 
-  font-style: normal;
-  font-weight: 400;
   font-size: 14px;
   line-height: 16px;
-  color: $color-charcoal;
 
   @media (min-width: $vp-768) {
-    order: 2;
+    width: 330px;
+    margin: 0;
 
     font-size: 17px;
     line-height: 30px;
+    text-align: right;
   }
 }
 
-.form__submit-button {
-  margin-bottom: 55px;
+.form__button {
+  width: 100%;
+  margin: 0 auto;
+  padding: 16px 20px;
 
-  font-style: normal;
-  font-weight: 700;
   font-size: 17px;
   line-height: 16px;
 
   @media (min-width: $vp-768) {
-    max-width: 230px;
-  }
-}
-
-.form__list--about {
-  @media (min-width: $vp-768) {
-    display: grid;
-  }
-}
-
-.form__item {
-  @media (min-width: $vp-768) {
-    margin-bottom: 46px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  &--about {
-    margin-bottom: 22px;
-
-    @media (min-width: $vp-768) {
-      display: flex;
-      align-items: center;
-      max-width: 501px;
-      margin-bottom: 41px;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-
-    @media (min-width: $vp-1150) {
-      max-width: 700px;
-    }
-  }
-
-  &--checkbox {
-    margin-bottom: 37px;
-
-    @media (min-width: $vp-768) {
-      margin-bottom: 50px;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-  }
-
-  @media (min-width: $vp-768) {
-    margin-bottom: 46px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-}
-
-.form-group__container {
-  margin-bottom: 8px;
-
-
-  @media (min-width: $vp-768) {
-    display: grid;
-    align-items: center;
-    margin-bottom: 0;
-    padding: 60px 0 24px;
-
-    grid-template-columns: auto 1fr;
-
-    &:last-child {
-      padding-top: 0;
-      padding-bottom: 50px;
-    }
-  }
-}
-
-.form-group--more {
-  @media (min-width: $vp-768) {
-    display: flex;
-    margin-bottom: 53px;
-  }
-}
-
-.form-group__label-more {
-  @media (min-width: $vp-768) {
-    display: grid;
-    width: 100%;
-  }
-}
-
-.form__submit {
-  max-width: 320px;
-  margin: 0 auto;
-  padding: 0 30px;
-
-  @media (min-width: $vp-768) {
-    display: flex;
-    align-items: baseline;
-    max-width: 768px;
-    padding: 0 50px;
-
-    column-gap: 135px;
-  }
-
-  @media (min-width: $vp-1150) {
-    display: flex;
-    align-items: baseline;
-    max-width: 710px;
-    padding: 0 5px;
-
-    column-gap: 165px;
-  }
-}
-
-
-.form__container {
-  max-width: 320px;
-  margin: 0 auto;
-  padding: 0 30px;
-
-  &--last {
-    margin-bottom: 11px;
-  }
-
-  @media (min-width: $vp-321) {
-    max-width: 320px;
-  }
-
-  @media (min-width: $vp-768) {
-    max-width: 768px;
-    padding: 0 57px 0 72px;
-  }
-
-  @media (min-width: $vp-1150) {
-    max-width: 1150px;
-    padding: 0 97px;
-  }
-}
-
-.form__container--color {
-  @media (min-width: $vp-768) {
-    background-color: $color-white-smoke;
-  }
-}
-
-
-.form-group__contact {
-  position: absolute;
-  top: 3px;
-  left: 227px;
-
-  pointer-events: none;
-
-  @media (min-width: $vp-768) {
-    top: 15px;
-    left: 93%;
-  }
-
-  @media (min-width: $vp-1150) {
-    left: 80%;
+    order: -1;
+    width: 230px;
+    margin: 0;
   }
 }
