--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -108,8 +108,8 @@
   &::before {
     content: "";
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 42%;
+    left: 54%;
 
     width: 67px;
     height: 100px;
@@ -122,6 +122,10 @@
   @media (min-width: $vp-768) {
     max-width: 768px;
     margin-bottom: 52px;
+
+    &::before {
+      top: 41%;
+      left: 52%;
   }
 }
 
