--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -66,6 +66,7 @@
   flex-wrap: wrap;
   align-items: center;
   min-height: 80px;
+  justify-content: center;
   margin: 0;
   padding: 25px 50px 28px;
 
@@ -86,6 +87,10 @@
   display: flex;
   align-items: center;
   margin-right: 11px;
+
+  &:last-child {
+    margin-right: 6px;
+  }
 }
 
 .footer__socials-link {
