--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,7 +2,7 @@
   padding: 20px 30px 60px 30px;
 
   @media (min-width: $vp-768) {
-    padding: 50px 0 50px 0;
+    padding: 57px 0 44px 0;
   }
 
   @media (min-width: $vp-1150) {
@@ -19,7 +19,7 @@
 
   @media (min-width: $vp-768) {
     margin-bottom: 13px;
-    padding: 0 72px;
+    padding: 0 50px;
 
     font-size: 17px;
     line-height: 30px;
@@ -59,7 +59,7 @@
     display: grid;
     align-items: start;
     margin: 50px 0;
-    padding: 0 50px 0 72px;
+    padding: 0 50px 0 50px;
 
     border: none;
 
@@ -177,8 +177,7 @@
     margin-bottom: 33px;
 
     @media (min-width: $vp-768) {
-      margin-bottom: 54px;
-      padding-right: 28px;
+      margin-bottom: 52px;
 
       grid-template-rows: min-content min-content 1fr;
     }
@@ -213,7 +212,7 @@
 
     @media (min-width: $vp-768) {
       margin-bottom: 26px;
-      padding: 0 28px 0 72px;
+      padding: 0 50px;
     }
 
     @media (min-width: $vp-1150) {
@@ -270,7 +269,7 @@
     @media (min-width: $vp-768) {
       margin-top: 0;
       margin-bottom: 50px;
-      padding: 0 28px 0 72px;
+      padding: 0 50px;
     }
 
     @media (min-width: $vp-1150) {
@@ -326,11 +325,11 @@
     @media (min-width: $vp-768) {
       margin-top: 53px;
       margin-bottom: 53px;
-      padding-right: 28px;
     }
 
     @media (min-width: $vp-1150) {
-      margin-bottom: 53px;
+      margin-bottom: 51px;
+      margin-top: 50px;
       padding-left: 50px;
     }
 
@@ -453,7 +452,7 @@
       margin-bottom: 22px;
 
       @media (min-width: $vp-768) {
-        margin-bottom: 24px;
+        margin-bottom: 26px;
       }
     }
   }
@@ -551,7 +550,8 @@
 
   @media (min-width: $vp-768) {
     position: absolute;
-    top: 8px;
+    top: 1px;
+    left: 22px;
 
     width: 50px;
     height: 50px;
@@ -559,6 +559,7 @@
 
   @media (min-width: $vp-1150) {
     top: 0;
+    left: 0;
   }
 }
 
@@ -573,8 +574,6 @@
 
   @media (min-width: $vp-768) {
     position: absolute;
-    top: 8px;
-    left: -22px;
 
     width: 52px;
     height: 52px;
@@ -718,7 +717,7 @@
   @media (min-width: $vp-768) {
     display: flex;
     justify-content: space-between;
-    padding: 2px 39px 8px 72px;
+    padding: 0 50px 8px 50px;
   }
 
   @media (min-width: $vp-1150) {
